# Neuron-Encrypt

./: .gitignore  CRASH_RECOVERY_ANALYSIS.md  CRITICAL_RECHECK_REPORT.md  CRYPTO_TEST_REPORT.md  CRYPTO_VULNERABILITY_ANALYSIS.md  FINAL_RECHECK_REPORT.md  HONEST_SECURITY_ASSESSMENT.md  LICENSE  MEMORY_ANALYSIS_REPORT.md  MEMORY_SECURITY_ANALYSIS.md  README.md  SECURITY_ANALYSIS.md  SECURITY_DEFER.md  SECURITY_RECOMMENDATIONS.md  USER_SECURITY_GUIDE.md  VULNERABILITY_FIXES_SUMMARY.md  VaultX.spec  ZERO_VULNERABILITIES_SUMMARY.md  atomic_file_ops.py  audit_output.json  build.bat  build_linux.sh  build_macos.sh  crypto_secure_ultimate.py  deny.toml  fix2.diff  fix4_install.patch  fix_can_proceed.py  fix_ci.py  fix_crypto.diff  fix_gui.diff  fix_gui.py  fix_gui_scramble.diff  fix_gui_v2.diff  fix_gui_v2.py  fix_gui_v3.py  fix_reporter.diff  gui_part1.txt  gui_part2.txt  gui_part3.txt  (+19 more)
.github/workflows/: android.yml  release.yml
android/: .gitignore  README.md  build-rust.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/neuronencrypt/app/: CryptoService.kt  MainActivity.kt  NeuronEncryptNative.kt  ProgressListener.kt  Strength.kt
android/app/src/main/kotlin/com/neuronencrypt/app/ui/: BatchScreen.kt  HomeScreen.kt  SingleFileScreen.kt
android/app/src/main/kotlin/com/neuronencrypt/app/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: styles.xml
android/neuron-encrypt-jni/: Cargo.toml
android/neuron-encrypt-jni/src/: lib.rs
installer/: README.md  neuron-encrypt.nsi
neuron-encrypt/: Cargo.toml  build.bat  build.rs
neuron-encrypt/.cargo/: deny.toml
neuron-encrypt/src/: crypto.rs  crypto.rs.orig  error.rs  gui.rs  gui.rs.rej  main.rs  utils.rs
