[package]
name = "neuron-encrypt"
version = "1.0.0"
edition = "2021"
description = "Military-grade file encryption — AES-256-GCM-SIV · Argon2id · HKDF-SHA512"

# Expose crypto + error as a library for Android NDK / iOS Swift FFI
[lib]
name = "neuron_encrypt_core"
path = "src/lib.rs"

[[bin]]
name = "neuron-encrypt"
path = "src/main.rs"

[dependencies]
aes-gcm-siv = { version = "0.11", features = ["std"] }
argon2      = { version = "0.5",  features = ["std"] }
hkdf        = "0.12"
sha2        = "0.10"
zeroize     = { version = "1.7",  features = ["derive"] }
rand_core   = { version = "0.6",  features = ["getrandom"] }
eframe      = { version = "0.27", features = ["default"] }
egui        = "0.27"
rfd         = "0.14"
thiserror   = "1.0"
chrono      = "0.4"
crossbeam-channel = "0.5"
hex = "0.4.3"

[lints.clippy]
explicit_auto_deref = "allow"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
